<resources>
    <string name="app_name">StackOverflow Results</string>
    <string name="action_settings">Settings</string>

    <!--card view text-->
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Sort pop up-->
    <string name="asc_dsc_order">Ascending/Descending Order</string>
    <string name="asc">Ascending</string>
    <string name="dsc">Descending</string>
    <string name="activity">Activity</string>
    <string name="relevance">Relevance</string>
    <string name="votes">Votes</string>
    <string name="creation">Creation</string>
    <string name="sort_based_on">Sort based on -</string>

    <!--Search preferncces-->
    <string name="search_title">Search for hash tags</string>
    <string name="search_hint">Search for hash tags</string>
    <string name="title_activity_search_results">Search Results</string>

</resources>
