<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NavigationActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/sort_based_on"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:id="@+id/sort_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstRadioGroup">
    <RadioButton
        android:text="@string/activity"
        android:textSize="20sp"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity" />

    <RadioButton
        android:text="@string/creation"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/creation" />

    <RadioButton
        android:text="@string/votes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/votes"
        android:textSize="20sp"/>

    <RadioButton
        android:text="@string/relevance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relevance"
        android:textSize="20sp"/>
    </RadioGroup>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:paddingTop="8dp"
        android:orientation="vertical">
    <TextView
        android:text="@string/asc_dsc_order"
        android:textSize="20sp"
        android:paddingLeft="4dp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ascdscorder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secondRadioGroup">
        <RadioButton
        android:text="@string/asc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/asc"
        android:duplicateParentState="true"
        android:textSize="20sp"/>

        <RadioButton
            android:text="@string/dsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/dsc"
            android:textSize="20sp"/>

        </RadioGroup>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>